syntax = "proto3";

package IRNet.Widgets;

// Base Widget message with oneof for polymorphism
message Widget {
  string type = 1;
  oneof widget_data {
    Scaffold scaffold = 2;
    AppBar app_bar = 3;
    Body body = 4;
    Text text = 5;
    TextFromState text_from_state = 6;
    Button button = 7;
    Row row = 8;
    Column column = 9;
    ElevatedButton elevated_button = 10;
  }
}

// Widget implementations
message Scaffold {
  Widget app_bar = 1;
  Widget body = 2;
}

message AppBar {
  Widget title = 1;
}

message Body {
  Widget content = 1;
  Widget button = 2;
}

message Text {
  string value = 1;
}

message TextFromState {
  TValue value = 1;
}

message Button {
  Widget text = 1;
  Handler handler = 2;
}

message Row {
  repeated Widget children_exprs = 1;
}

message Column {
  repeated Widget children_exprs = 1;
}

message ElevatedButton {
  Widget child = 1;
  Handler on_pressed_handler = 2;
}

// Handler base message with oneof for polymorphism
message Handler {
  string type = 1;
  oneof handler_data {
    GoHandler go_handler = 2;
    SetStateHandler set_state_handler = 3;
    CompositeHandler composite_handler = 4;
    PrintHandler print_handler = 5;
    SetStateHandlerWithValue set_state_handler_with_value = 6;
  }
}

// Handler implementations
message GoHandler {
  string route = 1;
}

message SetStateHandler {
  string key = 1;
  string value = 2;
}

message CompositeHandler {
  repeated Handler actions = 1;
}

message PrintHandler {
  string message = 1;
}

message SetStateHandlerWithValue {
  string key = 1;
  string value = 2;
}

// TValue base message with oneof for polymorphism
message TValue {
  string key = 1;
  string type = 2;
  string value = 3;
  oneof value_data {
    TString t_string = 4;
  }
}

message TString {
  string key = 1;
}

message Router {
  repeated RouteWidget routes = 1;
}

message RouteWidget {
    string name = 1;
    string service = 2;
    string path = 3;
}